# flock-tagger

./: .gitignore  README.md  pipeline.py  pyproject.toml
.claude/: settings.local.json
flock_tagger/: __init__.py  camera.py  osm.py  tiling.py
tests/: conftest.py  test_core.py
